# crm

./: Cargo.toml  README.md  cliff.toml
.github/workflows/: build.yml
crm/: Cargo.toml  app.yml  build.rs
crm-core/: Cargo.toml
crm-core/src/: config.rs  error.rs  lib.rs  telemetry.rs
crm-core/src/otel/: grpc.rs  http.rs  mod.rs
crm-metadata/: Cargo.toml  app.yml  build.rs
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-notification/: Cargo.toml  app.yml  build.rs
crm-notification/src/: config.rs  lib.rs  main.rs
crm-notification/src/abi/: app.rs  email.rs  mod.rs  sms.rs
crm-notification/src/pb/: notification.rs
crm-notification/tests/: service.rs
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: mod.rs
crm/src/pb/: crm.rs  mod.rs
load-balancer/: Cargo.toml
load-balancer/examples/: client.rs
load-balancer/src/: auth.rs  lib.rs  main.rs
protos/: crm.proto  message.proto
protos/crm/: rpc.proto
protos/metadata/: rpc.proto
protos/notification/: rpc.proto
protos/user_stat/: message.proto  rpc.proto
user-stat/: Cargo.toml  app.yml  build.rs
user-stat/assets/: clickhouse  postgres.sql
user-stat/examples/: gen_data.rs  gen_data_psql.rs
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: clickhouse_repo.rs  mod.rs  postgres_repo.rs
user-stat/src/pb/: message.rs  user_stat.rs
user-stat/tests/: service.rs
