[workspace]
members = ["crm"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.82"
prost = "0.12.4"
prost-build = "0.12.4"
prost-types = "0.12.4"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"