[workspace]
members = ["crm", "crm-notification", "user-stat"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
crm-notification = { path = "crm-notification" }
futures = "0.3.30"
prost = "0.12.4"
prost-build = "0.12.4"
prost-types = "0.12.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.22"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
