[package]
name = "crm-notification"
version = "0.1.0"
edition = "2021"

[features]
default = ["uuid"]
test_utils = ["fake", "nanoid", "uuid"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crm-core = { workspace = true }
fake = { workspace = true, optional = true }
futures = { workspace = true }
nanoid = { version = "0.4.0", optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true, features = ["timeout", "util"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"], optional = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
crm-notification = { workspace = true, features = ["test_utils"] }
