[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
crm-notification = { workspace = true }
dotenv = "0.15.0"
futures = { workspace = true }
pingora = { version = "0.3.0", features = ["proxy"] }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pingora-load-balancing = "0.3.0"
