[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crm-core = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
http = "1.1.0"
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tower = { workspace = true, features = ["timeout", "util"] }
tower-http = { workspace = true, features = ["trace"] }
tonic = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clickhouse = "0.12.2"
async-stream = "0.3.5"

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive", "chrono"] }
nanoid = "0.4.0"
