[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"

[features]
test-util = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
crm-core = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
http = "1.1.0"
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tower = { workspace = true, features = ["timeout", "util"] }
tower-http = { workspace = true, features = ["trace"] }
tonic = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clickhouse = { version = "0.12.2", features = ["inserter", "time"] }
async-stream = "0.3.5"
serde_repr = "0.1.19"
time = "0.3.36"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
sqlx-db-tester = "0.4.2"

[build-dependencies]
anyhow = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive", "time"] }
user-stat = { path = "../user-stat", features = ["test-util"] }
clickhouse = { version = "0.12.2", features = ["test-util"] }
nanoid = "0.4.0"
